DataGrid: Fix long validation message is cut off in the form editing mode (T819068) (#9961)

--- a/styles/widgets/generic/gridBase.generic.less
+++ b/styles/widgets/generic/gridBase.generic.less
@@ -631,6 +631,10 @@
                 border-top: ~"@{@{widgetName}-border}";
                 border-bottom: ~"@{@{widgetName}-border}";
             }
+
+            &.dx-@{widgetName}-edit-form {
+                white-space: normal;
+            }
         }
 
         .dx-master-detail-row {
